欠月的梅赛德斯 十六章处理

--- a/OEBPS/Text/c016.xhtml
+++ b/OEBPS/Text/c016.xhtml
@@ -159,39 +159,65 @@
     <p>强制提高魔力的输出，将历史之眼倒在了地上。</p>
     <p>但是，这就是我的极限。完全只是魔法，自己也动不了。</p>
     <p>但是，即使梅赛德斯不能行动，也有可以行动的伙伴。</p>
-    <p>本凯将交叉弓向上发射，被重力吸引急速下降，刺入历史之眼。</p>
+    <p>本凯将交叉弓向上发射，被重力吸引急速下降，向历史之眼。</p>
     <p>看了那个之后马上解除魔法，切换到下一个魔法。</p>
-    <p>「<span class="character">フェアザンメルン！」</span></p>
+    <p>「<span class="character">versammeln!」</span></p>
+    <p><span class="comment translator">フェアザンメルン 德语(versammeln)。聚集、手机。集める（あつめる）</span></p>
     <p>梅赛德斯的原创土属性魔法第三弹与其说是重力，不如说是引力。</p>
     <p>是一种在手被遮住的方向上产生引力场，将周围的物体拉入的魔法，但威力不大。</p>
     <p>但是这样也能稍微阻碍敌人的行动。</p>
-    <p>梅赛德斯更是身体力行，不违抗引力而加速。用力把来势的踢进去了。</p>
+    <p>梅赛德斯更是身体力行，不违抗引力而加速。借势用力踢了进去。</p>
     <p>还没有结束。抓住历史之眼的巨大躯体，配合重力的操作举起，向空中投掷。</p>
     <p>随后跳跃……就这样追了过去，把哈尔巴德摆在上面一口气甩了下去。</p>
     <p>历史之眼的脸裂开一半左右，轰鸣声向地面撞击。</p>
-    <p>「<span class="character">終章――アインスト……」</span></p>
-    <p>「<span class="character">させるか！」</span></p>
+    <p>「<span class="character">終章――<ruby><rb>过去zai……</rb><rt>einst</rt></ruby>」</span></p>
+    <p><span class="comment translator">アインスト 德语(einst)。过去。昔・かつて（むかし・かつて）</span></p>
+    <p>「<span class="character">休想！</span>」</p>
     <p>虽然想要进行最后的抵抗，但是比那个更快的梅赛德斯把哈尔巴德刺向了历史之眼的脸。</p>
-    <p>即使这样也还没有贯彻到底，但最后的一击就在这之后。</p>
+    <p>即使这样也还没有贯穿到底，但最后的一击就在这之后。</p>
     <p>梅赛德斯迅速地从历史之眼上跳下来，将全部魔力集中到双臂上。</p>
     <p>（坚持住啊······我的身体）</p>
     <p>魔法绝对不是可以无风险使用的东西。</p>
     <p>使用方也存在相应的消耗。</p>
-    <p>如果说太过枯竭，那就叫做死亡。</p>
+    <p>虽说那是被称为玛娜的特殊力量，但过度使用会导致枯竭失去意识，最坏的情况则会导致死亡。</p>
     <p>但是梅赛德斯决定即使犯了危险也要在这里取得胜利。</p>
     <p>如果不那样做的话，就不能把这家伙打倒现在的自己。我是这么想的。</p>
     <p>「<span class="character">重力百倍！」</span></p>
-    <p>以界限以上的输出发射重力波，再集中一点。集中到了哈尔巴德。</p>
+    <p>超出极限地输出发射重力波，再集中一点。集中到了哈尔巴德。</p>
     <p>于是哈尔巴德裂开了，自己崩溃的同时也刺向了历史之眼。</p>
     <p>然后——贯通。</p>
     <p>在历史之眼的脸上打了个洞，就像完成了任务一样粉碎散落。</p>
-    <p>「<span class="character">……干得······漂亮。汝等才是、能获取真实之人……」</span></p>
-    <p>而且历史之眼也因为现在的一击而崩塌了。</p>
+    <p>「<span class="character">……干得······漂亮。汝等才是、能获取真实之人……</span>」</p>
+    <p>历史之眼也因为现在的一击而崩塌了。</p>
     <p>说了对梅赛德斯他们的赞赏（虽然没有口……）他变成光的粒子消失了。</p>
     <p>看到这一幕后，梅赛德斯脱力，差点倒下。</p>
     <p>但是本凯突然接住了这个身体。</p>
     <p>“<span class="character">主人，你没事吧？”</span></p>
-    <p>“<span class="character">……啊！但是果然还是有点累了”</span></p>
+    <p>“<span class="character">……嗯！但是果然还是有点累了”</span></p>
     <p>这样考验就结束了。</p>
     <p>梅赛德斯怀着完成后的成就感，微微一笑。</p>
+    <p class="divline"></p>
+    <p id="La1">【今回の技の元ネタ解説】</p>
+    <p id="La2">・アルム・バンダージェ</p>
+    <p id="La3">ぐうっ……鎮まれ……鎮まれ、俺の腕よ……！</p>
+    <p id="La4"><br></p>
+    <p id="La5">・リュックザイテ・ゼルプスト</p>
+    <p id="La6">お前等、すぐに俺から離れろ！　俺の《闇の人格》が目を覚ます前にな！（キリッ</p>
+    <p id="La7"><br></p>
+    <p id="La8">・ミットライト・アオゲ</p>
+    <p id="La9">周囲の人「あの人、怪我もしてないのに腕に包帯巻いてるわｗｗｗ」</p>
+    <p id="La10">周囲の人「闇のｗｗｗ人格ｗｗｗ」</p>
+    <p id="La11">周囲の人「プークスクス」</p>
+    <p id="La12"><br></p>
+    <p id="La13">・アインザームカイト</p>
+    <p id="La14">ふっ、誰にも理解されないか……それでいい。俺に近付くと危険に巻き込んでしまうからな（キリッ</p>
+    <p id="La15">周囲の人「あいつと一緒にいるとこっちまで恥ずかしいから、あいつは遊びに誘わなくていいな」</p>
+    <p id="La16"><br></p>
+    <p id="La17">・ヘフティヒ・グリュック</p>
+    <p id="La18">ああ゛あ゛あ゛あ゛あ゛あ゛あ゛あ゛あ゛あ゛！！！</p>
+    <p id="La19">俺は中学生の頃、何て恥ずかしい事を……！（ゴロゴロゴロ）</p>
+    <p id="La20"><br></p>
+    <p id="La21">・ウンフェアエンダーリヒ・アインスト</p>
+    <p id="La22">なかったことにしたい！　具体的には中学生くらいの時の恥ずかしい俺をなかったことにしたい！</p>
+    <p id="La23">ああ゛あ゛あ゛あ゛あ゛あ゛あ゛あ゛あ゛あ゛！！！（ゴロゴロゴロ）</p>
 </body>
