--- a/OEBPS/Text/c017.xhtml
+++ b/OEBPS/Text/c017.xhtml
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <h1>17. 迷宫的真实</h1>
-    <p>在打倒舒瓦兹·历史表的梅赛德斯等人面前，又出现了一扇门。</p>
+    <h1>17. 迷宫的真相</h1>
+    <p>在打倒舒瓦兹·历史之眼的梅赛德斯等人面前，又出现了一扇门。</p>
     <p>那不是至今为止那样巨大的东西，而是让人觉得极其朴素的铁门。</p>
     <p>梅赛德斯披上掉在地上的大衣，扣住前面的扣子。</p>
     <p>虽然羞耻心很薄，但并不是说因此就喜欢一直穿着内衣。</p>
@@ -21,7 +21,7 @@
     <p>可称为大厅的空间里生长着好几棵树，树的中心部分嵌入了圆形的水槽。</p>
     <p>然后，在那之中的是……是魔物。</p>
     <br>
-    <p>鼹鼠的魔物是狼男、格利佩·菲特、果冻……在阿修拉奥加到施瓦尔茨·沃尔夫范。</p>
+    <p>鼹鼠的魔物是狼男、格利佩·菲特、果冻……阿修拉奥加和施瓦尔茨·沃尔夫范也看得到。</p>
     <p>无意中看到鼹鼠的魔物，眼睛果然还是受了伤。</p>
     <p>脱离了那个的前方有台座，台座上面有gelipe·feter的剑和本凯最初使用的剑同样的东西。</p>
     <p>台座下面开了一个洞，眺望了一会儿，令人惊讶的是与台座上设置的武器完全一样的武器从洞里被吐了出来。</p>
