欠月的梅赛德斯 第十七章翻译处理

--- a/OEBPS/Text/c017.xhtml
+++ b/OEBPS/Text/c017.xhtml
@@ -28,110 +28,112 @@
     <p>发出咕噜咕噜的声音回头一看，从树的根部魔物沸腾着，刚出生的魔物用空虚的眼睛向门外走去。</p>
     <p>没错……被复制了。魔物也好，武器也好。</p>
     <br>
-    <p>“这家伙到底是真相呢。魔物和道具都可以无限复制”</p>
-    <p>“好的。而且从现在开始，这里的设施全部都是你的东西……迷宫主人·梅赛德斯》</p>
+    <p>“ <span class="character">这家伙到底是真相呢。魔物和道具都可以无限复制”</span></p>
+    <p>“ <span class="character">好的。而且从现在开始，这里的设施全部都是你的东西……迷宫主人·梅赛德斯</span></p>
     <br>
     <p>虽然并不是对某人的提问，但却有人回答梅赛德斯的话。</p>
     <p>那是最初就听过的那个女性的声音。</p>
-    <p>可是声音是听不见的。哪里都看不到重要的声音的主人。</p>
+    <p>可是虽然有声音却哪里都看不到重要的声音的主人。</p>
     <br>
-    <p>“你呢？”</p>
-    <p>“我是制造编号12，识别码‘ツヴェルフ’。</p>
-    <p>你们现在所在的这个迷宫本身”</p>
+    <p>“<span class="character">你呢？”</span></p>
+    <p>“<span class="character">我是制造编号12，识别码‘ツヴェルフ’。</span></p>
+    <p><span class="comment translator">ツヴェルフ 德语(zwölf) 12</span></p>
+    <p><span class="character">你们现在所在的这个迷宫本身</span>”</p>
     <br>
     <p>听到自称是ツヴェルフ的声音的自我介绍，梅赛德斯不禁为之动摇。</p>
     <p>虽然没有将此表现出来，但因为无法掩饰惊愕而露出若干表情，自己也意识到自己已经抽筋了，自戒自己也还差得很远。</p>
     <p>在那样的她面前出现了一位女性，行了一个礼。</p>
-    <p>身着黑发身着白衣的女性，脸上戴着眼镜。</p>
+    <p>这是一头黑发身着白衣的女性，脸上戴着眼镜。</p>
     <p>虽然是美女，但梅赛德斯吃惊的是它的外表特征。</p>
     <p>耳朵不尖，没有野兽的特征，也没有鸟的特征，也没有吸血鬼特有的瞳孔。</p>
-    <p>……是人类。不是犯规。</p>
+    <p>……是人类。不是法鲁什。</p>
+    <p><span class="comment translator">ファルシュ 德语(Falsch) 。偽・偽物（にせ・にせもの）。</span></p>
     <p>学名Homo sapiens。在前世，梅赛德斯也是如此，被称为人类的生物。</p>
-    <p>“人、间……？”</p>
-    <p>“这既是正确的答案，也是错误的。</p>
-    <p>确实这个姿态是人的身姿,不过，象容易跟你们说一样地我放映出了的立体映像。</p>
-    <p>而这种姿态不是我自己的形态，而是模仿我所创造的神明中的一柱。</p>
-    <p>……即使那样也吃惊了。你知道众神的名字吧”</p>
-    <p>“……我只是在书上读过”</p>
-    <p>“这样啊。在旧时代记载了诸神的名字和身姿的文献应该全部被处分了,不过，还现存着。</p>
-    <p>或许是Falsh的思考方式的摇滚因世代交替而减弱了吧……法鲁什应该能够在无意识下避免制作记录着外貌的文献……”</p>
+    <p>“<span class="character">人、类……？”</span></p>
+    <p>“<span class="character">这既是正确的答案，也是错误的。</span></p>
+    <p><span class="character">确实这个姿态是人的身姿,我只不过是为了方便和你们说话而放映出来的立体影像。</span></p>
+    <p><span class="character">而这种姿态不是我自己的形态，而是模仿创造了我的神明中的一柱。</span></p>
+    <p><span class="character">……不过真让人吃惊。您知道众神的名字啊”</span></p>
+    <p>“<span class="character">……我只是在书上读过”</span></p>
+    <p>“<span class="character">这样啊。记载了在旧时代的诸神的名字和身姿的文献应该全部被处分了，看来还有残留呢。</span></p>
+    <p><span class="character">或许是法鲁什的思考方式的摇滚因世代交替而减弱了吧……法鲁什应该能够在无意识下避免制作记录着外貌的文献……”</span></p>
     <br>
-    <p>只要梅赛德斯知道，人类就不是神。</p>
-    <p>在神话中经常出现人类是模仿神的形态的生物，尽管如此，人类本身也应该只是生物。</p>
+    <p>据梅赛德斯所知，人类就不是神。</p>
+    <p>在神话中经常有人说人类是模仿神的样子的生物，但即便如此，人类本身也只是普通的生物。</p>
     <p>这对她来说是无法忽视的事情。</p>
-    <p>偶然创造了这个世界的众神是『ningen』的名吗？</p>
+    <p>偶然创造了这个世界的众神的名是『renlei』吗？</p>
     <p>还是自己认识的人自称是神呢……看似相似却完全不同。</p>
     <p>梅赛德斯认为。到现在为止我一直以为这里和原来的世界是无关的异世界。</p>
     <p>但是……也许这里不是异世界什么的吧。</p>
     <br>
-    <p>“你说这里会成为我的东西啊。也就是说，从今往后我将生产魔物和道具无限制吗？”</p>
-    <p>“是的，就是那样。但是并不是可以无限的生产。</p>
-    <p>复制魔物和道具时需要能量，因此不够的情况下不能复制”</p>
-    <p>“那个要怎么增加呢？”</p>
-    <p>“随着时间自动散布在大气中的纳米机器……用你们的话来吸收礼仪，充值”</p>
+    <p>“<span class="character">你说这里会成为我的东西啊。也就是说，从今往后我将能无限制制造魔物和道具吗？”</span></p>
+    <p>“<span class="character">是的，就是那样。但是并不是可以无限的生产。</span></p>
+    <p><span class="character">复制魔物和道具时需要能量，因此不够的情况下不能复制”</span></p>
+    <p>“<span class="character">那个要怎么增加呢？”</span></p>
+    <p>“<span class="character">使用随着时间自动散布在大气中的纳米机器……用你们的话来说叫做魔力的东西，通过吸收它们进行充能”</span></p>
     <p>梅赛德斯头痛了。那个可以说是实质无限。</p>
     <p>并且突入赶不上。什么叫思考锁定。什么呀，纳米机器？</p>
     <p>怎么回事？的确，追求真实的是自己，但没想到会出现这样的东西。</p>
     <p>魔物和道具都可以随意复制……这个根据使用方法的不同，甚至可以得到可以匹敌一国的军事力量。</p>
-    <p>而且，还有一点不好吃的是，既然已经有人到达了迷宫的真实，那么这些人也会抱着这样的想法的。</p>
-    <p>虽然不知道为什么不能上台表演，但拥有一国之力的个人确实在这个世界上有多少人。</p>
+    <p>而且，还有一点，既然过去已经有人到达了迷宫的真实，那么这些人也会抱着这样的想法的。</p>
+    <p>虽然不知道为什么不出现在舞台上，但是拥有一个国家都能毁灭的力量的个人确实存在于这个世界上。</p>
     <br>
-    <p>“首先请收下万能钥匙。</p>
-    <p>万能钥匙是绝对不会损坏的金属制成，也有自我修复功能，所以通常的手段是不会损坏的。</p>
-    <p>在众神的战斗中被使用，甚至连一个国家都被灭绝了，有这样的记录。”</p>
-    <p>齐夫这样说明的同时，在梅赛德斯面前出现了一块宝石。</p>
+    <p>“<span class="character">首先请收下万能钥匙。</span></p>
+    <p><span class="character">万能钥匙是绝对不会损坏的金属制成，也有自我修复功能，所以通常的手段是不会损坏的。</span></p>
+    <p><span class="character">在众神的战斗中被使用，有记录是甚至能承受可以消灭一个国家的‘神之火’的威力，。”</span></p>
+    <p>ツヴェルフ这样说明的同时，在梅赛德斯面前出现了一块宝石。</p>
     <p>用颤抖的指尖触摸那个的话，宝石很淡地闪耀。</p>
     <br>
-    <p>“被认证为主人。接下来请确定待机模式和密钥模式的形状”</p>
-    <p>“待机……？密钥，模式？”</p>
-    <p>“万能钥匙有携带出色的待机模式，和作为钥匙使用的两种钥匙模式。钥匙模式也可以作为武器使用，推荐使用剑等形状”</p>
-    <p>“锁的时候也不能变小吗？”</p>
-    <p>“在技术问题上，无论如何在发挥关键作用的时候都会变成刀剑的大小。到极限小型化做着,不过，这个以上好象不可能。对不起”</p>
+    <p>“<span class="character">被认证为主人。接下来请确定待机模式和密钥模式的形状”</span></p>
+    <p>“<span class="character">待机……？密钥，模式？”</span></p>
+    <p>“<span class="character">万能钥匙有便于携带的待机模式，和作为钥匙使用的两种钥匙模式。钥匙模式也可以作为武器使用，推荐使用剑等形状”</span></p>
+    <p>“<span class="character">锁的时候也不能变小吗？”</span></p>
+    <p>“<span class="character">在技术问题上，无论如何在发挥关键作用的时候都会变成刀剑的大小。到极限小型化做着,不过，这个以上好象不可能。对不起</span>”</p>
     <p>梅赛德斯点头理解zwölf的说明。</p>
     <p>虽然不知道原因，但是和待机模式不同，作为钥匙使用的时候需要很大。</p>
     <p>这恐怕是必要的作用差别吧。</p>
     <p>不是技术性地小型化不可能，钥匙的作用太大以小型不能做那个。</p>
     <p>另一方面，因为待机模式什么都不用做，所以小型化了也没问题……也就是说。</p>
-    <p>“那么，哈尔巴德比较好。可以拜托你和我用的东西一样吗？</p>
-    <p>“了解了”</p>
+    <p>“<span class="character">那么，哈尔巴德比较好。可以拜托你和我用的东西一样吗？</span></p>
+    <p>“<span class="character">了解了”</span></p>
     <p>梅赛德斯之前的宝石无视物理法则而变大，不久就和梅赛德斯使用的哈尔巴德一模一样。</p>
-    <p>手熟悉的感觉也和以前一样……不，比起以前，手更容易适应。</p>
-    <p>“请注意待机模式和密钥模式的切换在手中进行。那样的话钥匙就会变化”</p>
-    <p>“嗯……的确”</p>
+    <p>手感也和以前一样……不，比起以前，手更容易适应。</p>
+    <p>“<span class="character">请注意待机模式和密钥模式的切换在手中进行。那样的话钥匙就会变化”</span></p>
+    <p>“<span class="character">嗯……的确”</span></p>
     <p>听着他这么一说，心里就觉得很有趣，在哈尔巴德和宝石的形状之间来回走动。</p>
-    <p>因为暂且宝石的那样快要掉下了，以后打算制作镶入这个的带锁链的妇女装饰品梅赛德斯决定了。</p>
-    <p>因为奇怪地炫耀的话说不定被扒手瞄准，系皮带和锁放入口袋中的形式好。</p>
-    <p>“如果有那个钥匙的话，你就可以把迷宫拿走。</p>
-    <p>请保持密钥模式声明“压缩”。所以迷宫会被封锁在钥匙里”</p>
-    <p>“……做那个的瞬间，难道不连我们一起被封印起来吗？”</p>
-    <p>“如果您能联想到不应该封印的东西，那将不属于收纳对象。”</p>
-    <p>“那么……压缩</p>
+    <p>总之，如果一直是宝石的话，可能会掉下去，梅赛德斯决定之后用带有锁链的饰品来制作。</p>
+    <p>如果表现得很奇怪的话，可能会被小偷盯上，所以最好把皮带和锁链连接起来放在口袋里。</p>
+    <p>“<span class="character">如果有那个钥匙的话，你就可以把迷宫拿走。</span></p>
+    <p><span class="character">请保持密钥模式声明“压缩”。然后迷宫会被封锁在钥匙里”</span></p>
+    <p>“<span class="character">……做那个的瞬间，难道不会把我们一起封印起来吗？”</span></p>
+    <p>“<span class="character">如果您能联想到不应该封印的东西，那将不属于收纳对象。”</span></p>
+    <p>“<span class="character">那么……压缩</span></p>
     <br>
-    <p>梅赛德斯在下一个瞬间，很轻易地后悔自己尝试了那件事。</p>
+    <p>梅赛德斯在下一个瞬间，轻轻地地后悔自己轻易就尝试了那件事。</p>
     <p>迷宫就像是被哈尔巴德吸入了一样景色歪斜，留下了梅赛德斯们从那个场合象谎言一样地消失了。</p>
     <p>不仅仅是消失。迷宫的全部，简直象建模的最中的3D映像一样地，以脱离了现实的光景消失了。</p>
     <p>剩下的只是留在草原上的梅赛德斯。</p>
-    <p>在门前留下的克利亚不知道发生了什么事，用这样的表情看着梅赛德斯。</p>
+    <p>在门前留下的克拉伊利亚不知道发生了什么事的表情看着梅赛德斯。</p>
     <br>
-    <p>“怎么样呢？您有真实感吗？”</p>
-    <p>“那个，出迷宫的时候怎么办？”</p>
-    <p>请宣言“解冻”</p>
+    <p>“<span class="character">怎么样呢？您有真实感吗？”</span></p>
+    <p>“<span class="character">那个，出迷宫的时候怎么办？”</span></p>
+    <p>“ <span class="character">请宣言“解压”</span></p>
     <p>总之在引起骚动之前先回到迷宫吧。</p>
     <p>虽然是这样想的梅赛德斯，但是已经晚了。</p>
-    <p>附近的标语牌的村落很吵闹。也感到靠近这边的气息。</p>
-    <p>对了，如果迷宫突然消失的话谁都会惊讶。</p>
+    <p>附近的seeker的村落很吵闹。也感到靠近这边的气息。</p>
+    <p>也是，如果迷宫突然消失的话谁都会惊讶。</p>
     <br>
-    <p>“……本凯，快逃！”</p>
-    <p>“哈，是的！”</p>
+    <p>“<span class="character">……本凯，快逃！”</span></p>
+    <p>“<span class="character">哈，是的！”</span></p>
     <p>暂且，这个场在被看见身姿之前逃跑。</p>
-    <p>梅赛德斯从那个场合全力逃跑，之后本凯他们也继续了。</p>
+    <p>梅赛德斯从那个场合全力逃跑，本凯他们也跟着跑了。</p>
     <p>总觉得好像抱着比预想还要麻烦的东西。</p>
     <p class="divline"></p>
     <p>梅赛德斯攻略迷宫后一周。都城里闹得天翻地覆。</p>
-    <p>为何到现在为止有的迷宫突然消失了，当然谁攻略了这样的事。</p>
+    <p>为何到现在为止有的迷宫突然消失了，肯定是有谁攻略了这样的事。</p>
     <p>到底是谁攻略的？为什么那个人物不出来呢？这样的话题随处可见，梅赛德斯感到丢脸。</p>
     <p>在这种情况下，当然不可能有作为seeker的工作，而且根本就没有必要去做。</p>
-    <p>总之，把迷宫全部弄到手，也就是说，黄金门前方的宝物全部变成了梅赛德斯。</p>
+    <p>总之，把迷宫全部弄到手，也就是说，黄金门前方的宝物全部变成了梅赛德斯的所有物。</p>
     <p>到现在得到财产的挑战者们并不是从能持(有)的装载量的界限等，得到全部的。</p>
     <p>仅仅带回了一点能带走的量。</p>
     <p>当然那里也有为了增加搭载界限而使用的搬运用的魔物，带回了相当多的量吧，从全体来看只是一点点。</p>
@@ -143,31 +145,31 @@
     <p>其他还有迷宫钥匙的持有者，即使不让迷宫出现，也能看到迷宫里面。</p>
     <p>由于认识的事作为只钥匙的持有者能看见的立体映像在那个场合被展开。</p>
     <p>但是最让我吃惊的是，这个迷宫里还具备了可以让持有钥匙的人喜欢的改变设计等的扩展功能。</p>
-    <p>更能改变尺寸,不过，因为使用这个也mana，无限大不能。</p>
-    <p>但，因为削减现在的东西窄的事能回收mana，如果把二十五层的宽度集中到一层使之宽广的事可能。</p>
-    <p>“原来如此……不管迷宫怎么被攻略，都会有新的出现”</p>
-    <p>“挑战者选择金门的迷宫从迷宫中消失，随机重组后出现在别的地方。所以正确地说并不是新出现的”</p>
-    <p>“同一个迷宫的设计改变了好几次才出现……”</p>
+    <p>更能改变尺寸,不过，因为使用这个也需要消耗mana，不能做到无限大。</p>
+    <p>但是，现在把有的东西删减或变窄可以回收玛娜，所以把二十五层的面积集中到一个层次来变宽的话是可能的。</p>
+    <p>“<span class="character">原来如此……不管迷宫怎么被攻略，都会有新的出现”</span></p>
+    <p>“<span class="character">挑战者选择金门的迷宫从迷宫中消失，随机重组后出现在别的地方。所以正确地说并不是新出现的”</span></p>
+    <p>“<span class="character">同一个迷宫的设计改变了好几次才出现……”</span></p>
     <p>迷宫增加的理由，是如此简单的事，梅赛德斯也没想到。</p>
     <p>不是增加了。只是被使用同样的迷宫。</p>
     <p>虽然全世界都认为迷宫的攻略仅占三成……实际上岂止是三成，连一成都没有被攻略吧。</p>
     <p>因为大部分的人都会在那儿选择金门吧。</p>
-    <p>“……但是，很奇怪啊。像我这样的人也能超越考验。</p>
-    <p>那样的话应该可以被攻略的迷宫，就算有和我一样超越黑之门的人也不奇怪”</p>
+    <p>“<span class="character">……但是，很奇怪啊。像我这样的人也能超越考验。</span></p>
+    <p><span class="character">那样的话应该可以被攻略的迷宫，就算有和我一样超越黑之门的人也不奇怪”</span></p>
     <p>梅赛德斯觉得不可思议的是，攻略者的数量太少。</p>
     <p>先不管选择哪一扇门，像自己这样的小姑娘也能走到门前。</p>
     <p>那么，再多走到门前，不是也不奇怪吗？</p>
     <p>岂止如此，越过黑之门得到迷宫的人更多地在也好。</p>
-    <p>可是那个问题，象tsuveru的若干吃惊一样的声音返回了。</p>
-    <p>“BOSS好像对自己评价很低。</p>
-    <p>我想，身边没有比较的对象吧？”</p>
-    <p>“嘛，除了我之外的吸血鬼战斗的样子在附近没见过呢。”</p>
-    <p>“主人所服从的阿修拉奥加和修瓦鲁兹·沃尔夫范格被设定为几个锻炼的吸血鬼才能战斗的强度。</p>
-    <p>如果说得通俗易懂的话，有几个等级A的seeker才能打倒……如果做得不好那也是说不定全灭的水平。</p>
-    <p>试炼的舒瓦兹·希特里耶甚至可以与军队作战吧”</p>
-    <p>我觉得梅赛德斯夸张了茨瓦尔夫的话。</p>
-    <p>的确，我确信自己一定很强，但是不管怎么说能和军队战斗也太过分了。</p>
-    <p>第一，这里是吸血鬼之国。即使是柔弱的少女也能坦然举起百公斤重量的种族是吸血鬼。</p>
+    <p>但是，对于这个问题，ツヴェルフ的声音多少有些惊讶。</p>
+    <p>“<span class="character">BOSS好像对自己评价很低。</span></p>
+    <p><span class="character">我想，身边没有比较的对象吧？”</span></p>
+    <p>“<span class="character">嘛，除了我之外的吸血鬼战斗的样子在附近没见过呢。”</span></p>
+    <p>“<span class="character">主人所驯服的阿修拉奥加和修瓦鲁兹·沃尔夫范格被设定为几个锻炼的吸血鬼才能战斗的强度。</span></p>
+    <p><span class="character">如果说得通俗易懂的话，有几个等级A的seeker才能打倒……如果做得不好那也是说不定全灭的水平。</span></p>
+    <p><span class="character">试炼的黑·历史之眼甚至可以与军队作战吧”</span></p>
+    <p>梅赛德斯觉得茨瓦尔夫的话有些夸张。</p>
+    <p>的确，能肯定自己一定很强，但是不管怎么说能和军队战斗也太过分了。</p>
+    <p>第一，这里是吸血鬼之国。即使是柔弱的少女也能坦然举起百公斤重量的吸血鬼种族。</p>
     <p>如果走在那边的老婆子认真地跑，人的短跑世界记录等很轻地重新粉刷掉的是吸血鬼。</p>
     <p>如果那个成为兵成为军，强度不用考虑。</p>
     <p>也许是自恋，但我觉得自己很坚强。</p>
