--- a/OEBPS/Text/c102.xhtml
+++ b/OEBPS/Text/c102.xhtml
@@ -79,7 +79,7 @@
     <p>这次出现的迷宫正好是在那个国家和奥尔克斯之间出现的。</p>
     <p>如果走出国境内，那将被当作斯塔克迷宫一样被当作该国的迷宫来对待。</p>
     <p>但是，这次的情况是无法归哪个国家的所有。</p>
-    <p>哪个国家的犯规进入也好，谁攻略也好。也就是说早者胜。</p>
+    <p>哪个国家的法鲁什进入也好，谁攻略也好。也就是说早者胜。</p>
     <p>“于是立刻两国共同在附近建立村落，开始攻略迷宫。</p>
     <p>海卡行会支部也计划近期建成”</p>
     <p>虽然觉得这样没关系吗，但是现在吸血鬼和精灵的关系并不是那么坏。</p>
