--- a/OEBPS/Text/c110.xhtml
+++ b/OEBPS/Text/c110.xhtml
@@ -76,7 +76,7 @@
     <p>“本地标识名、果胶布丁。</p>
     <p>战斗力与普通的蟑螂比较没有变化，但是拥有风的属性，可以用魔法在空中飞翔”</p>
     <p>“哥布林……真是意外的多才多艺啊”</p>
-    <p>梅赛德斯对齐夫的解释感到佩服和惊讶，同时用哈尔巴德把空中飞翔的哥布林弄成了两半。</p>
+    <p>梅赛德斯对ツヴェルフ的解释感到佩服和惊讶，同时用哈尔巴德把空中飞翔的哥布林弄成了两半。</p>
     <p>对比普通的哥布林尼特指挥官魔法使，此次对能在天空飞的哥布林而感到十分吃惊。</p>
     <p>说不定过几天，在水中生存的蟑螂和潜入地下的蟑螂也能遇见。</p>
     <p>“话说回来，莱斯利。你有什么攻击手段吗？”</p>
