--- a/OEBPS/Text/c113.xhtml
+++ b/OEBPS/Text/c113.xhtml
@@ -23,7 +23,7 @@
     <p>还不如说是在他疏忽大意的瞬间，钥匙被抢走了，于是，这次是刚才拿着钥匙到处逃跑的人变成追赶的一方。</p>
     <p>“丑陋……”</p>
     <p>在希克之间的**之战中，莱斯利发出了惊讶的声音，梅赛德斯也内心表示同意。</p>
-    <p>总之，和那种人合作下去的话，无论等到什么时候也不会前进，梅赛德斯首先抓住了站在门前的标语牌，踢碎了船的墙壁，把标语牌扔了出去。</p>
+    <p>总之，和那种人合作下去的话，无论等到什么时候也不会前进，梅赛德斯首先抓住了站在门前的seeker，踢碎了船的墙壁，把seeker扔了出去。</p>
     <p>“哇哇啊！”</p>
     <p>发出了悲鸣，seeker掉下去了，接着她把剩下的seeker也抓起来扔到外面去。</p>
     <p>然后，到最后只有拿着钥匙的家伙了。那个吸血鬼低下了头，是不是求饶呢？</p>
