--- a/OEBPS/Text/c003.xhtml
+++ b/OEBPS/Text/c003.xhtml
@@ -25,19 +25,19 @@
     <p>琉迪亚，在那样的吸血鬼中是象描绘了平凡一样的女性。</p>
     <p>相貌美丽，但没有能力上引人注目的。</p>
     <p>腕力极限，只能无力地把苹果捏碎，比100公斤重的东西从出生以来一次也没有拿过。</p>
-    <p>即使全力奔跑，即使跑过100米也跑不到8秒。</p>
-    <p>那样的，是特别无可取代的她,不过，脸的美丽灾难了。</p>
+    <p>就算全力奔跑也跑不过100米，却连8秒都跑不完。</p>
+    <p>那样的，没有什么长处的她，容貌之美给她带来了灾难。</p>
     <p>有一天，偶然造访城镇的伯恩哈特卿注意到了她，并命令她在那天晚上陪侍。</p>
     <p>老实说，完全不喜欢，虽然想拒绝，但对方是领主。反过来不知道会被干什么。</p>
     <p>但是，因为一次的关系，而怀上了孩子被困在家里是最糟糕的。不知道多少次骂过那个不戴套的混蛋家伙。</p>
     <p>因此她成为了侧室，但对待她绝不是件好事。</p>
     <p>所谓“宅邸”就是被赋予徒有虚名的家，而与之隔离的结果只有一个负责照顾的人。</p>
     <p>至少在两层楼房里要求带游泳池和大浴场，结果被无视了。Gadem。</p>
-    <p>菜是每天用最高级的牛肉做的牛排，虽然说只有半熟的牛肉才能烤熟，但是每天都不准备。不知为什么烤的程度也是全熟的。</p>
+    <p>菜最好是每天用最高级的牛肉做的牛排，而且不是半熟的也不行，但是每天都不准备。不知为什么烤的程度也是全熟的。</p>
     <p>生气地说不用再来了，结果真的不来了。真是个没出息的男人。</p>
     <br>
     <p>如此坚强又厚颜无耻的她有一个女儿。</p>
-    <p>名字叫梅赛德斯，即使不偏袒父母，也是和自己一模一样可爱的女儿。</p>
+    <p>名字叫梅赛德斯，即使不以母亲之身偏袒，也是和自己一模一样可爱的女儿。</p>
     <p>我真的觉得自己的基因努力了真是太好了。如果产生了像丈夫一样的强势的话就会哭。</p>
     <p>女儿到5岁左右是比较普通的可爱的孩子,不过，从5岁左右开始显出不象孩子一样的聪明。</p>
     <p>恐怕是正确认识了自己所处的现状吧。</p>
