--- a/OEBPS/Text/c004.xhtml
+++ b/OEBPS/Text/c004.xhtml
@@ -12,7 +12,7 @@
 
 <body>
     <h1>4. 常夜的街道</h1>
-    <p>seeker工会是R・P历112年成立的支援、管理<ruby><rb>探索者</rb><rp></rp> <rt>シーカー</rt></rp></ruby>的组合。</p>
+    <p>seeker工会是R・P历112年成立的支援、管理<ruby><rb>探索者</rb><rp><rt>シーカー</rt></rp></ruby>的组合。</p>
     <p>据说这个红行星存在几个未涉足的领域，特别被称作迷宫的东西全体的七成也没被攻略。</p>
     <p>迷宫是突然出现的巨大封闭空间。</p>
     <p>其形状主要是洞穴，原本是平原的地方和沼泽地的地方毫无预兆地出现，在谁到达最深处之前不会消失。</p>
