--- a/OEBPS/Text/c017.xhtml
+++ b/OEBPS/Text/c017.xhtml
@@ -171,9 +171,9 @@
     <p>的确，能肯定自己一定很强，但是不管怎么说能和军队战斗也太过分了。</p>
     <p>第一，这里是吸血鬼之国。即使是柔弱的少女也能坦然举起百公斤重量的吸血鬼种族。</p>
     <p>如果走在那边的老婆子认真地跑，人的短跑世界记录等很轻地重新粉刷掉的是吸血鬼。</p>
-    <p>如果那个成为兵成为军，强度不用考虑。</p>
-    <p>也许是自恋，但我觉得自己很坚强。</p>
+    <p>如果成为士兵组为军队，强度自然不用考虑。</p>
+    <p>或许是自恋，觉得自己很强。</p>
     <p>但是，不管怎样，要自恋到那种程度是很难的。</p>
-    <p>对梅赛德斯自己的强度的认识还差距着。</p>
+    <p>梅赛德斯还没有对自己的强度的认知。</p>
     <p>因为没有比较的对象，她至今没有正确把握自己的异常性。</p>
 </body>
