--- a/OEBPS/Text/c024.xhtml
+++ b/OEBPS/Text/c024.xhtml
@@ -149,14 +149,14 @@
     <p>于是，怀着安心，不知道自己身上发生了什么，被父亲杀害了。</p>
     <p>梅赛德斯所做的事，只是让他们白白地放心，让他们品味着从高处坠落的滋味。</p>
     <p>并且一定，这个尸体以后被外边扔掉连埋葬都不被做吧。</p>
-    <p>“……真是进展不顺利啊”</p>
-    <p>梅赛德斯表现出了对他们的同情。让我看到了甜味。</p>
+    <p><span class="character">“……真是进展不顺利啊”</span></p>
+    <p>梅赛德斯表现出了对他们的同情。让我看到了天真。</p>
     <p>但是，实际上，我对这些盗贼毫不介意。没有可怜的感情，甚至认为是自作自受。</p>
     <p>所以梅赛德斯如果想杀了他们，就会被杀的吧。</p>
     <p>没有一丝慈悲和厌恶感，就像要把虫子打死一样……会以和杀死魔物一样的感觉毁灭吧。</p>
     <p>不，不对。不是那样。</p>
-    <p>和魔物一样，在梅赛德斯中他们是魔物以下。</p>
-    <p>为了自己的欲望而吃别人的**……就算破坏了这种东西，也肯定什么也感觉不到。</p>
+    <p>非但没有和魔物一样，他们在梅赛德斯中是魔物以下。</p>
+    <p>为了自己的欲望而以他人为食的畜生……就算将他们击溃，也肯定什么也感觉不到。</p>
     <p>杀死魔物时感受到的一点厌恶感，也一定不会伴随。</p>
     <p>梅赛德斯很害怕那个。</p>
     <p>就算是坏蛋，杀死和自己一样的吸血鬼，自己什么也感觉不到……即使对手是魔物也不会有罪恶感。我最害怕那个。</p>
