--- a/OEBPS/Text/c037.xhtml
+++ b/OEBPS/Text/c037.xhtml
@@ -61,7 +61,7 @@
     <p>对于吸血鬼来说，所谓白天，对于人来说，就像深夜一样看不见东西。</p>
     <p>突然受到强光照射，就像是人比喻一下子停电一样。</p>
     <p>不久光线平息，梅赛德斯睁开眼睛，台上便出现了惊人的光景。</p>
-    <p>狼男与木乃伊男、蟑螂、橡树、骸骨……虽然都是下级，但是排列着之前没有出现过的众多魔物，然后跪着跟随巴鲁多。</p>
+    <p>狼男与木乃伊男、蟑螂、猪人、骸骨……虽然都是下级，但是排列着之前没有出现过的众多魔物，然后跪着跟随巴鲁多。</p>
     <p>（让驯服了的魔物在什么地方待命……？不，没有隐藏那么多东西的地方。</p>
     <p>在外面待机……不，不管光线有多么耀眼，只要有那么多的魔物进入，就会发出声音。怎么回事……）</p>
     <p>不是用万能钥匙解冻魔物。只有那个是确实的。</p>
