--- a/OEBPS/Text/c041.xhtml
+++ b/OEBPS/Text/c041.xhtml
@@ -145,7 +145,7 @@
     <p>「等等，伯恩哈特卿。他的孩子们……可能什么都不知道，即使没有做到那种程度……”</p>
     <p>“……”</p>
     <p>伯恩哈特俯视吉克林德。</p>
-    <p>虽然心里对她的甜味感到惊讶，但却没有说出口。</p>
+    <p>虽然心里对她的天真感到惊讶，但却没有说出口。</p>
     <p>我甚至深思着什么样的发言能赢得她的信任。</p>
     <p>如果在这里奇怪地讨吉克林德的不快今后会变得难得相处的。</p>
     <p>那么，在这里，让大家看到稍微走近一点的姿势最终会有利吧。</p>
