--- a/OEBPS/Text/c072.xhtml
+++ b/OEBPS/Text/c072.xhtml
@@ -93,7 +93,7 @@
     <p>钥匙是从外面挂着的，但是知道那里有监视。</p>
     <p>轻轻敲门，然后边模仿吉克林德的声音边向监视的方向提问。</p>
     <p>“喂，外面太吵了。到底发生了什么？</p>
-    <p>「哈。听说是橡子大群的袭击”</p>
+    <p>「哈。听说是猪人大群的袭击”</p>
     <p>“哦？到底是从哪里冒出来的呢？”</p>
     <p>“现在正在调查中。但是您不必担心，公主。</p>
     <p>像猪人那样不可能到达这里，即使万一变成那样，我们也会保护你的”</p>
@@ -103,7 +103,7 @@
     <p>失去了公爵家的长子和隐密部队的长官的自己对国家来说是损失，如果伯恩哈特主张挽回旧业的话，军队就不得不行动了吧。</p>
     <p>但是伯恩哈特不可能做那种事，那样的话军队就不会动了。</p>
     <p>如果在军队无法行动的情况下能够进行如此大规模袭击的人物，那也是有限的。</p>
-    <p>更加这个国家被围墙，附近也没有橡子的住处。</p>
+    <p>更加这个国家被围墙，附近也没有猪人的住处。</p>
     <p>如果因此突然猪人组成群出现了……。</p>
     <p>“……好。菲利克斯君，快逃吧」</p>
     <p>“诶？”</p>
