--- a/OEBPS/Text/c073.xhtml
+++ b/OEBPS/Text/c073.xhtml
@@ -13,21 +13,21 @@
 <body>
     <h1>73. 规格外的女帝</h1>
     <p>城内变成了战场。</p>
-    <p>猪人和哥布林并列着被频繁驱除的魔物，但其战力并不低。</p>
-    <p>厚厚的皮下脂肪超过2米。即使是很轻的个体，体重也不会下降150公斤，是能举起岩石的力量。并且支撑巨大身体的骨。</p>
+    <p>猪人和哥布林并列经常被频繁驱除的魔物之中，但其战力并不低。</p>
+    <p>两米的身躯下是厚厚的皮下脂肪。即使是很轻的个体，体重也不会低于150公斤，能举起岩石的力量。并且支撑巨大身体的骨。</p>
     <p>如果是身体能力较高的吸血鬼的话，就算是炫耀自己力量也能取胜的魔物，但如果数量一致的话还是很麻烦的对手。</p>
     <p>不管城里的骑士们多么精锐，对于突然的袭击，无法采取最好的行动，无论如何都要落后一步。</p>
-    <p>已经几只橡子侵入城内，以我的东西脸走来走去。</p>
+    <p>而且已经有几只猪人侵入了城内，以一副什么都不知道的样子来回走着。</p>
     <p>但是，正因为处于混乱之中，骑士们才没有注意到汉娜和菲利克斯。</p>
-    <p>“菲利克斯，这里！地下室就在前方！”</p>
-    <p>“什，你怎么知道的？”</p>
-    <p>“调查了几次！”</p>
+    <p>“<span class="character">菲利克斯，这里！地下室就在前方！</span>”</p>
+    <p>“<span class="character">什，你怎么知道的？</span>”</p>
+    <p>“<span class="character">调查了几次！</span>”</p>
     <p>看来汉娜经常从软禁中脱离出来调查城内。</p>
-    <p>隐密部队长的头衔不是伊达。</p>
-    <p>只要是她一个人，随时都可以逃脱的准备已经做好了。</p>
+    <p>隐秘部队长的头衔不是摆样子的。</p>
+    <p>如果只是她一个人的话，随时都可以逃脱的准备已经做好了。</p>
     <p>尽管如此到今天还残留着菲利克斯在吧。</p>
     <p>或者，说不定在女帝身边也在寻找。</p>
-    <p>“噢，我说！肮脏的野兽！放开我！”</p>
+    <p>“ <span class="character">噢，我说！肮脏的野兽！放开我！</span>”</p>
     <p>在通向地下室的道路上，我听到了熟悉的女性的声音。</p>
     <p>那就是，来到这座城堡当初遇到的叫罗杰的士兵长。</p>
     <p>虽然有点麻烦，但她不是骑士。</p>
