--- a/OEBPS/Text/c078.xhtml
+++ b/OEBPS/Text/c078.xhtml
@@ -85,9 +85,9 @@
     <p>*</p>
     <p>“呼……终于全灭了吗？丑恶的猪”</p>
     <p>擦拭着额头的汗水，蔷薇花一口气喘吁吁。</p>
-    <p>进入城中的橡树群平安地扫荡完毕，恢复了平静。</p>
+    <p>进入城中的猪人群平安地扫荡完毕，恢复了平静。</p>
     <p>因为使用了不象猪人sa的游击队战法和联合所想之外使之苦战,不过，还是象正规的骑士和士兵取后一样的事没有。</p>
-    <p>城里涌出的橡树也已经被讨伐了吧。</p>
+    <p>城里涌出的猪人也已经被讨伐了吧。</p>
     <p>在那里，她们的王贝阿朵里克斯出现了。</p>
     <p>“看来猪已经被宰了吧，洛杉矶士兵长”</p>
     <p>“陛下！为什么在这样的地方……”</p>
