--- a/OEBPS/Text/c090.xhtml
+++ b/OEBPS/Text/c090.xhtml
@@ -78,7 +78,7 @@
     <p>「这样啊，要是真的是这个宅子的人不好办啊。不管再怎么播放”</p>
     <p>“还是那么天真啊。但是那样也不错”</p>
     <p>听了汉娜的指示，然后心情消失了。</p>
-    <p>汉娜认为，虽然她自知是甜蜜的，但无论如何自己不适合坚持冷酷无情。</p>
+    <p>汉娜认为，虽然她自知是天真的，但无论如何自己不适合坚持冷酷无情。</p>
     <p>由于工作关系那样不好吃，但这已经是气质的问题了吧。</p>
     <p>从这一点上来说，在宅邸中的暗杀者们是幸运的。</p>
     <p>至少，与企图从外部入侵的家伙相比……。</p>
