--- a/OEBPS/Text/c095.xhtml
+++ b/OEBPS/Text/c095.xhtml
@@ -24,7 +24,7 @@
     <p>“所以，为了保护他，保护他……”</p>
     <p>“当然了！”</p>
     <p>在瓦尔堡加的气魄面前，汉娜是顽强的。</p>
-    <p>但是实际上，这次是汉娜最后甜味让事态恶化，所以不能强烈地反驳。</p>
+    <p>但是实际上，这次是汉娜最后天真地让事态恶化，所以不能强烈地反驳。</p>
     <p>在这种情景面前，菲利克斯只是茫然的。</p>
     <p>啊，我是迷宫所有者？那是什么？</p>
     <p>或许是考虑过那种事情吧，现在已经心不在焉了。</p>
@@ -51,7 +51,7 @@
     <p>虽然做了意料之外的事，但是很有趣……是的，他的表情在说。</p>
     <p>“在你看来，这是不正常的失误。做了相当不彻底的事情”</p>
     <p>“……我在反省。不应该活着，应该早点杀掉。</p>
-    <p>这是我的甜蜜所导致的失败”</p>
+    <p>这是我的天真所导致的失败”</p>
     <p>“ククク……你怎么可能有天真呢。是故意的……吧？”</p>
     <p>伯恩哈特信以为真地说出的话语让梅赛德斯停下了脚步。</p>
     <p>“抓住尤利亚这个女人，让他吐露情报的时候，你的选择有两个。</p>
