--- a/OEBPS/Text/c101.xhtml
+++ b/OEBPS/Text/c101.xhtml
@@ -36,7 +36,7 @@
     <p>在那里由于此次的事罗勒方面支持的贵族和商人被囚禁，接受着情况听取。</p>
     <p>说点题外话，没有トライヌ。他早一步脱离了真正的王派，通过梅赛德斯提供情报，最终无罪释放。</p>
     <p>真是个善于处世的男人。</p>
-    <p>「啊，梅露。这里”</p>
+    <p>“<span class="character">啊，梅露。这里</span>”</p>
     <p>一进监狱，汉娜就顶住许多部下冲了过来。</p>
     <p>因为身高，看上去就像大人中孩子混在游戏里一样，但她是这里的首位。</p>
     <p>汉娜带着梅赛德斯去里面的房间。</p>
@@ -101,7 +101,7 @@
     <p>这样一来，她会给大家留下一个慈悲的公主的印象吧。</p>
     <p>如果以后就这样用一生幽闭这个形式弄完马克斯『救助与自己对抗的人的生命之类和善』能留下好印象。</p>
     <p>但是如果越过那个开始说幽闭也不行等难吃。</p>
-    <p>过了慈悲的岁月，她只是个甜蜜的公主。</p>
+    <p>过了慈悲的岁月，她只是个幼稚的公主。</p>
     <p>“这么说来，梅露酱。不好意思，能不能想想办法？”</p>
     <p>而且这也太乱来了。</p>
     <p>梅赛德斯叹了一口气，轻轻地答应了阿姨可爱的请求。</p>
