--- a/OEBPS/Text/c108.xhtml
+++ b/OEBPS/Text/c108.xhtml
@@ -107,7 +107,7 @@
     <p>她所做的事，也许从其他方面来看都是没有效率的。</p>
     <p>「啊，好！那么就特别的，让我看看我伟大的发明吧！”</p>
     <p>如果猪人也煽动想办法。</p>
-    <p>在梅赛德斯的脑内印象中，乘坐在橡树上的莱斯利气势汹汹地攀登在树上，但并不敢说出来。</p>
+    <p>在梅赛德斯的脑内印象中，乘坐在猪人上的莱斯利气势汹汹地攀登在树上，但并不敢说出来。</p>
     <p>姑且不论，把跟她的关系好好地搞好是不会有损失的吧。</p>
     <p>梅赛德斯拜托大家一定要看看她所说的伟大的发明。</p>
 </body>
