--- a/OEBPS/Text/c140.xhtml
+++ b/OEBPS/Text/c140.xhtml
@@ -61,7 +61,7 @@
     <p>“<span class="character">父亲呢……</span>”</p>
     <p>“<span class="character">当然，除了吸血鬼以外我都打算毁灭。只有吸血鬼残留下来，支配世界。这就是我所描绘的未来预想图。</span>”</p>
     <p>“<span class="character">…………</span>”</p>
-    <p>“<span
+    <p>“<span class="character"><span
             class="character">你觉得很粗暴吗？实际上是这样的吧。失去的东西也很多吧。特别是在文化这一点上，我们吸血鬼差得可怜。在料理、医疗、娱乐、制造、农业……所有的方面，我们都比其他三个种族落后。缺乏自己制造什么的想法。作为生物，一开始就很优秀，弥补不足没有为了赚钱的工夫。只剩下吸血鬼的世界……没有想要更好的“未来”。我们将永远维持‘现在’的现状吧</span>”
     </p>
     <p></p>
@@ -97,134 +97,132 @@
     <p>但是，这个真相被解除的时候，是得到三个地下城的时候，对只得到两个现状的伯恩哈特应该是没有公开的信息。</p>
     <p class="divline"></p>
     <p></p>
-    <p>“<span class="character">ダンジョンを二つ入手した事で得た情報に加え、過去の文献をありったけ手元にかき集め、私なりに推測したのだ。そして今のお前の反応で、私の考えに間違いがなかった事を確信したぞ</span>”</p>
-    <p>“<span class="character">では、父上は停滞を止む無しと……？</span>”</p>
-    <p>“<span class="character">まさか。私が目指すのは停滞し続けたこの世界を動かす事だ。確かに吸血鬼は停滞し続ける生物だが……今ならば、私やお前がいる。私達ならば変えられる、動かせる。私かお前が世界の頂点に立ち、他の三種族を駆逐し……そして新たな世界を築き上げる。それが私の描く未来絵図だ</span>”
+    <p>“<span class="character">我得到了两个地下城后得到的信息，再加上过去所有的文献都收集到了我的手上，我自己推测了一下。然后我确信，凭你现在的反应，我的想法是没错的。</span>”</p>
+    <p>“<span class="character">那么，父亲必须停止停滞……？</span>”</p>
+    <p>“<span class="character">不会吧。我的目标是推动这个持续停滞的世界。确实吸血鬼是一种持续停滞的生物……但是现在的话，我和你就在这里。如果是我们的话，可以改变，可以推动世界发展。我或者你站在世界的顶点，驱逐其他三种种族……然后建立新的世界。这就是我所描绘的未来蓝图。</span>”
     </p>
     <p></p>
-    <p>　吸血鬼は元々恵まれているせいで、前に進む力がない。</p>
-    <p>　だがベルンハルトは例外だ。</p>
-    <p>　今を良しとせず、貪欲に、そして凶暴に、野心を燃やして前へ進もうとしている。</p>
-    <p>　立ち塞がる者を全て踏み潰し、その果てに新たなる世界を築こうと企てているのだ。</p>
+    <p>吸血鬼原本就很幸运，没有前进的力量。</p>
+    <p>但是伯恩哈特是例外。</p>
+    <p>他贪欲，并且凶暴，燃烧野心，打算不断前进。</p>
+    <p>他企图摧毁所有阻挡他们的人，在他们的尽头建立一个新的世界。</p>
     <p></p>
-    <p>“私の描く絵は教えたぞ。さあ、お前の絵を教えろ”</p>
-    <p>“……ふ。そうだな……では、あえて言うならば――父上も、意外と謙虚なようで”</p>
-    <p>“何……？”</p>
-    <p>“てっきり父上も私と同じ未来を見ていると思っていたが……まさか神の人形に甘んじるのを良しと考えるとは”</p>
+    <p>“<span class="character">我告诉你我的蓝图了。来，告诉我你的蓝图吧。</span>”</p>
+    <p>“<span class="character">……呵呵。是啊……那么，硬要说的话——父亲也意外地谦虚。</span>”</p>
+    <p>“<span class="character">什么……？</span>”</p>
+    <p>“<span class="character">我以为父亲一定也和我看到了同样的未来……难道认为甘于神的人偶是好的吗</span>”</p>
     <p></p>
-    <p>　メルセデスは挑発的に笑い、黄金の瞳が不気味に輝いた。</p>
-    <p>　父と同じものを見ていると思っていたが、何ともまあ……父は思っていたよりずっと謙虚で、ずっと欲がない。</p>
-    <p>　少なくとも、メルセデスの貪欲ぶりに比べれば父の、何と控えめな事か。</p>
-    <p>　そう思ったから、メルセデスは嗤ったのだ。</p>
+    <p>梅赛德斯挑衅地笑着，黄金的眼睛令人毛骨悚然地闪耀着光芒。</p>
+    <p>还以为和父亲看到了同样的东西，没想到……父亲比预想的要谦虚得多，一直没有欲望。</p>
+    <p>至少，和梅赛德斯的贪欲相比，父亲是多么的谨慎啊。</p>
+    <p>因为那样想，所以梅赛德斯在嘲笑。</p>
     <p></p>
-    <p>“今は私達がいる、確かにそうだろう。だが吸血鬼とて永遠に生きるわけではない。私達が死ねば、また世界は停滞に逆戻りだ。先へ進むには異なる長所を持つ者……他の三種族が必要だ”</p>
-    <p>“では吸血鬼が甘んじて滅ぶと？”</p>
-    <p>“いや。吸血鬼も他の種族も私は滅ぼさない。私が牙を剥くのは、共にこの大地を生きる同胞ではなく、勝手に不要と判断して消し去ろうとしている神気取りの生物だ”</p>
+    <p>“<span class="character">现在我们在，确实是这样吧。但是我们并不是作为吸血鬼永远活下去的。如果我们死了，世界又会回到停滞的状态。要想继续前进，需要有不同优点的人……其他三种种族。</span>”</p>
+    <p>“<span class="character">那么吸血鬼甘愿灭亡？</span>”</p>
+    <p>“<span class="character">不，吸血鬼和其他种族我都不会毁灭。我要面对的，不是共同生活在这片大地上的同胞，而是擅自判断不需要并打算消灭的神气生物。</span>”</p>
     <p></p>
-    <p>　メルセデスの言葉に、ベルンハルトが目を見開いた。</p>
-    <p>　数秒の驚愕……やがて、その顔は歓喜に歪む。</p>
+    <p>对梅赛德斯的话，伯恩哈特睁大了眼睛。</p>
+    <p>几秒钟的惊愕……不久，那张脸就因欢喜而扭曲。</p>
     <p></p>
-    <p>“なるほど……くくくっ……そうか、そうか……！　私ですら選ばなかった、その道を往くか！　娘よ！”</p>
-    <p>“そうだ。この世界にある生も死も、それは全てこの世界に生きる私達のものであるべきだろう？　他の誰かの玩具であり続けるのは、もう終わらせるべきだ”</p>
+    <p>“<span class="character">原来如此……库库库……这样啊，这样啊……！连我都没选择的，要走那条路吗！女儿啊！</span>”</p>
+    <p>“<span class="character">没错。这个世界上的生与死，都应该是生活在这个世界上的我们的东西吧？继续做别人的玩具，就应该结束了。</span>”</p>
     <p></p>
-    <p>　ダンジョンの中から、ツヴェルフが息を呑むのが伝わってくる。</p>
-    <p>　ツヴェルフは言った。アレはもう生物ではないと。</p>
-    <p>　ならばきっと……地球人類はきっと、とうの昔に滅びていたのだろう。</p>
-    <p>　今残っているのは地球人類ではなく、生物ですらなく……その未練のみを継承した、残骸のようなナニカに過ぎない。</p>
+    <p>从地下城里传来了茨瓦尔夫屏住呼吸的声音。</p>
+    <p>茨瓦尔夫说。那个已经不是生物了。</p>
+    <p>如果是这样的话……地球人类一定早就灭亡了吧。</p>
+    <p>现在剩下的不是地球人类，甚至不是生物……只不过是一片残骸般的某种东西，只继承了它的未开发状态。</p>
+    <p><span class="comment translator">ナニカ something 某种东西的意思（也是猎人里的某个角色的名字）</span></p>
     <p></p>
-    <p>“決まった絵しか描けない額縁の中では、私の望む絵は描けない。だからまずは額縁の方を……”</p>
+    <p>“<span class="character">在只能画固定的画的画框里，我无法画出我想要的画。所以先画画框吧……</span>”</p>
     <p></p>
-    <p>　ならば引導を渡してやろう。他でもない、かつては地球人類だったという記憶を持つこの自分こそが。</p>
-    <p>　そう決意し、メルセデスは禁忌を宣言した。</p>
+    <p>那么我给你引路吧。这就是拥有过去曾是地球人类的记忆的自己小偷。</p>
+    <p>怀着这样的决心，梅赛德斯宣布了禁忌。</p>
     <p></p>
-    <p>“――神々に引導を渡す。世界の支配など、そこに至る為のついで・・・だ”</p>
+    <p>“<span class="character">——将引导交给众神。为了支配世界，顺便……</span>”</p>
     <p></p>
-    <p>　消えるべきは吸血鬼でもなく、エルフェでもなく、獣人でも鳥人でもない。奴らの方だ。</p>
-    <p>　その宣言と同時に、ベルンハルトは心底愉快そうに大笑いした。</p>
+    <p>应该消失的既不是吸血鬼，也不是精灵，既不是兽人也不是鸟人。是他们。</p>
+    <p>在宣布这一消息的同时，伯恩哈特也发自内心地大笑起来。</p>
     <p></p>
     <p>◆</p>
     <p></p>
-    <p>　痛む身体を引きずり、メルセデスは屋敷の外に出ていた。</p>
-    <p>　夜空で輝く蒼い月は変わらず美しく、そして今日も欠けている。</p>
-    <p>　どうやら満月の日を外してしまったようだが、メルセデスにとっては欠けた月こそ親しみを覚えるものだ。</p>
+    <p>拖着疼痛的身体，梅赛德斯来到了屋外。</p>
+    <p>夜空中闪耀的苍蓝月亮依旧美丽，而且今天也缺失着。</p>
+    <p>虽然好像是错过了满月之日，但对梅赛德斯来说，欠缺的月亮才是让人感到亲切的东西。</p>
     <p></p>
-    <p>“ツヴェルフ”</p>
-    <p>『はい』</p>
-    <p>“あえてもう一度聞く。神々は……もう、『人』ではないんだな？”</p>
-    <p>『はい。人ではありません。生物ですらありません』</p>
-    <p>“なあツヴェルフ……お前、本当は人の事が好きだったんだろう？”</p>
+    <p>“<span class="character">茨瓦尔夫</span>”</p>
+    <p>《<span class="character">はい</span>》</p>
+    <p>“<span class="character">再问你一遍。众神……已经不是‘人’了吧？</span>”</p>
+    <p>《<span class="character">是的，不是人了，连生物都不是。</span>》</p>
+    <p>“<span class="character">呐，茨瓦尔夫……你其实是喜欢人的吧？</span>”</p>
     <p></p>
-    <p>　月を眺めながら言うメルセデスに、ツヴェルフは答えない。</p>
-    <p>　だが返事がなくても分かる。嫌いなものの姿など、好んで真似るものか。</p>
-    <p>　普段は感情がないかのように振舞っているツヴェルフが、神々について語る時だけ嫌悪に彩られていたのは何故か？</p>
-    <p>　好きと嫌いは表裏一体で、あの嫌悪感こそツヴェルフの本心を何よりも雄弁に語っている。</p>
-    <p>　ツヴェルフはきっと、許せないのだ。</p>
-    <p>　好きだったからこそ、今の神々の姿が、何よりも認められないのだろう。</p>
+    <p>面对望着月亮说的梅赛德斯，茨瓦尔夫没有回答。</p>
+    <p>但即使没有得到回复，也能理解。你会喜欢和模仿你不喜欢的事物的外观吗？</p>
+    <p>平时似乎没有感情的它，为什么只有在谈论关于众神的话题时才会被嫌恶所渲染呢？</p>
+    <p>喜欢和讨厌是表里一致的，那种厌恶感比什么都雄辩地表达了茨瓦尔夫的真心。</p>
+    <p>茨瓦尔夫一定不能原谅。</p>
+    <p>正因为喜欢，所以现在的众神的样子，比什么都不被承认吧。</p>
     <p></p>
-    <p>“きっと、今の神々の姿は酷いものなんだろうな……それこそ、私達から、『絵を残す』という文化を奪うくらいには”</p>
-    <p>『お気づきでしたか』</p>
-    <p>“この世界は不自然なまでに、『過去の事を絵に残す』という文化がない。誰もが何故か、言われるまでその発想に行き着かない。これは、私達に意図的に仕掛けられた思考の制限だろう。</p>
-    <p>もっとも、父上などは『絵図』という言葉を使う事から分かるように、自覚さえしてしまえば問題ない程度の制限のようだが。</p>
-    <p>さて、足りぬ頭なりに、絵を残されて一番困るのは誰かを私は考えた。きっとそれは、絵に残されたくないくらいに醜くなってしまった、神々なのだろうとな”</p>
-    <p>『仰る通りです……もう遠い昔の事になりますが、この惑星を生物が住める環境にする際に、神々はその姿を見せています。そして自分達の姿を後世に残されぬよう、当時のファルシュ達の脳に干渉し、自分達の姿を絵として残す事を禁じました。その影響が、今もマスター達の中に残っているのでしょう』
-    </p>
-    <p>“それは……あまり、見たくないな”</p>
+    <p>“<span class="character">现在的神的样子一定很残酷吧……这才是夺走我们‘画画’这一文化的原因。</span>”</p>
+    <p>《<span class="character">您注意到了吗？</span>》</p>
+    <p>“<span class="character">这个世界没有不自然的‘把过去的事情留在画上’的文化。谁都不知道为什么，在别人说之前都没有达到那个想法。这大概是我们有意设计的思考限制吧。</p>
+    <p>不过，父亲等从使用“绘图”这个词就可以明白，只要有意识就没有问题的限制。</p>
+    <p>话说回来，我想，在头脑不足的情况下，留下画来最困扰的是谁。那一定是丑陋到不想留在画里的神吧”</span>”</p>
+    <p>《<span class="character">正如我所说……这已经是很久以前的事了，当这个行星变成生物可以居住的环境时，众神就会看到它的身影。而且为了不让自己的身影留在后世，会干涉当时的法鲁什他们的大脑，禁止将自己的身影作为画保留下来。这种影响至今仍留在主人们的心中对吧</span>》</p>
+    <p>“<span class="character">那……我不太想看。</span>”</p>
     <p></p>
-    <p>　メルセデスはしみじみと、本心から言う。</p>
-    <p>　本当に見たいものではない。かつて栄華を極めた人類の成れの果ての残骸など。</p>
+    <p>梅赛德斯发自内心地说。</p>
+    <p>真的不是想看的东西。曾经极尽荣华的人类的落魄的残骸等。</p>
     <p></p>
-    <p>“ところでこのコンペティション……もしかして、期限が近いんじゃないか？”</p>
-    <p>『……何故、そのように？』</p>
-    <p>“寿命だ。神々は様々な方法で生を繋いでいるだろうが、永遠ではないだろう。いつか死ぬ”</p>
-    <p>『…………』</p>
-    <p>“このコンペティションの勝者が決まれば、その種族を正式採用し、神々による記憶と知識の転写――『転生』が始まる。しかし今はまだ実験段階で危険だから、まずはテストとして保存状態のいい死体から記憶を抜き出して先に転生させ、私のような実験体を生み出した。つまり神々は最終的には自分達が転生する気なわけだが……しかし、そこでトラブルが起きたんじゃないか？　最初は数百いた候補が残り四つになって以降停滞してしまい、テストが上手く進まなくなったんだ。
-    </p>
-    <p>そして停滞したまま時は流れ……神々はきっと焦っただろう。このままではコンペティションが終わる前に、自分達が死んでしまうとな”</p>
-    <p>『素晴らしい推理です。何故その答えに行き着いたかを訊ねても？』</p>
-    <p>“私がここにいるからだ。危険を承知で転生の実験をしなければならないほど、焦っているんだろう？　そして……私は今日までに、私以外の転生者と遭遇していない。これは、転生の成功率が決して高くない事を意味している”</p>
+    <p>“<span class="character">对了，这场比赛……也许截止日期快到了？</span>”</p>
+    <p>《<span class="character">……为什么会这样说？</span>》</p>
+    <p>“<span class="character">寿命。众神会用各种各样的方法延续生命，但不会永远。总有一天会死的。</span>”</p>
+    <p>《<span class="character">…………</span>》</p>
+    <p>“<span class="character">如果这个竞赛的胜者决定了的话，正式采用那个种族，神的记忆和知识的转印——《转世》开始。但是现在实验阶段还是很危险的，所以首先从保存状态良好的尸体中提取记忆，让其先转生，产生了像我这样的实验体。也就是说，众神最终还是想自己转生……但是，在那里不是发生了麻烦吗？最初数百个候补只剩下四个之后就停滞不前了，测试没能顺利进行。时间就这样停滞着……神们一定很着急吧。这样下去的话，在比赛结束之前，我们就死了啊</span>”</p>
+    <p>《<span class="character">非常棒的推理。我可以问你为什么会得出那个答案吗？</span>》</p>
+    <p>“<span class="character">因为我在这里。明明知道危险却还要进行转生实验，是不是很着急呢？而且……我到今天为止没有遇到过除我以外的转生者。这意味着转世的成功率绝对不高。</span>”</p>
     <p></p>
-    <p>　メルセデスは自分以外の転生者と出会っていない。</p>
-    <p>　しかしこれはおかしいのだ。</p>
-    <p>　何故なら、メルセデスの転生が神々による実験ならば、他にもっと転生者がいていいはずだからだ。</p>
-    <p>　動物実験だって一匹のマウスだけで確認しないだろう。複数のマウスを用意し、繰り返し実験する。</p>
-    <p>　なのにメルセデスは自分以外の転生者を見ていない。</p>
-    <p>　きっと、他にも転生者はいるのだろう。あるいは、いたのだろう。</p>
-    <p>　しかし、こうして『だろう』と推測しているのがもうおかしい。</p>
-    <p>　本当に転生の実験が行われ、成功していたならば……あちこちに転生者がいて、もっと混沌とした世界になっていなければおかしいのだ。</p>
+    <p>梅赛德斯没有遇到过除了她自己以外任何转世的人。</p>
+    <p>但这很奇怪。</p>
+    <p>为什么呢，因为如果梅赛德斯的转世是众神进行的实验的话，应该还有其他的转生者才对。</p>
+    <p>动物实验也没只用一只老鼠来确认，而是准备多只老鼠反复实验。</p>
+    <p>但是梅赛德斯却没有看到自己以外的转生者。</p>
+    <p>肯定还有其他转世的人。或者也许是。</p>
+    <p>但是，这样推测“是吧”已经很奇怪了。</p>
+    <p>如果真的进行了转生的实验，成功了的话……到处都有转生者，如果没有变成更加混沌的世界就很奇怪了。</p>
     <p></p>
-    <p>“多分年代を重ね過ぎたんだろうな。どの種族も、当初は問題なく転生が行えるように調整されていたはずだ。そうでなければ、そもそもの前提から破綻してしまう。</p>
-    <p>しかし残り四種族になってから時代を重ね、世代を重ね、停滞し続け……そして、目に見えない部分で進化していた。神々の転生がほとんど成功しない……後継者として相応しくない生物にな”</p>
-    <p>『お見事です。その情報は本来、もっと多くのダンジョンを入手した際に得られるはずのものなのですが……』</p>
-    <p>“ここからは更に想像だが、神々は相当困ったはずだ。そこで期限を設けたのではないか？　このままいずれかの種族が期限内に正式採用に漕ぎ着ければ、その種族を再調整し……もし期限が間に合わなければ……破棄しようと。そして前に正式採用からあぶれた数百の種族からよさそうなのを見繕って、もうそれでいいやと採用するんじゃないか？　すぐに今この世界にいる四種族を破棄してしまわないのはただの未練だろうな。長年かけてきたものをすぐに捨てる決断は出来ない、というだけだろう。どうだ？”
+    <p>“<span class="character">大概是上了年纪了吧。不管是哪个种族，当初都应该调整成可以毫无问题地进行转生。如果不是这样的话，从最初的前提开始就失败了。但是，成为剩下的四个种族后，时代不断变迁，世代不断停滞……然后，在看不见的地方进化着。神的转生几乎没有成功……成为不适合作为后继者的生物</span>”</p>
+    <p>《<span class="character">太棒了。这个情报本来应该是在获得更多地下城的时候得到的……</span>》</p>
+    <p>“<span class="character">从这里再进一步想象一下，众神应该是相当困难的。难道不是在那里设置了期限吗？如果任意一个种族在期限内正式录用的话，就重新调整那个种族……如果赶不上期限的话……就放弃吧。而且，从之前正式录用的数百个种族来看，似乎不错修补一下，不就这样录用了吗？不马上就把现在这个世界上的四个种族废弃，这只是一种依恋吧。只是不能马上做出扔掉多年来的做出的东西的决断吧。是吧？
     </p>
     <p></p>
-    <p>　メルセデスはツヴェルフの方を向き、尋ねる。</p>
-    <p>　ツヴェルフはその問いに答えない。というよりはきっと答えられないのだろう。</p>
-    <p>　この情報を話すには、まだメルセデスの持つダンジョンの数が足りていない。</p>
-    <p>　だからツヴェルフは返事をせず、ただ静かに微笑んでみせた。</p>
+    <p>梅赛德斯朝着茨瓦尔夫询问。</p>
+    <p>茨瓦尔夫没有回答那个问题。与其这么说，还不如说一定回答不上来吧。</p>
+    <p>要说这个信息的话梅赛德斯的地下城数量还不够。</p>
+    <p>所以茨瓦尔夫没有回答，只是静静地微笑着。</p>
     <p></p>
-    <p>“それほど外しているわけではなさそうだな。しかしそうなると……私達に残された時間はもう多くないな。この世界はまさに、神々に捨てられる寸前なわけだ”</p>
-    <p>『もしそうだとして、大人しく捨てられるつもりはないのでしょう？』</p>
-    <p>“ああ。その前に奴らの望む通りに、この茶番を私が終わらせてやる。</p>
-    <p>この世界にある、全てのダンジョンを制覇してな”</p>
+    <p>“<span class="character">好像没什么特别的。但是这样的话……留给我们的时间已经不多了。这个世界正是在被众神抛弃的边缘。</span>”</p>
+    <p>《<span class="character">如果是那样的话，就不打算老实地被抛弃了吧？</span>》</p>
+    <p>“<span class="character">啊，在那之前，我会按照他们所希望的那样，结束这个闹剧。要称霸这个世界上的所有迷宫</span>”</p>
     <p></p>
-    <p>　メルセデスは蒼い月を見上げ、好戦的に笑みを深めた。</p>
-    <p>　かつてこの世界で最初に決意を固めた時のように掌を前に突き出し、月を手の中に閉じ込めるように強く握りしめる。</p>
-    <p>　この世界で全力で生きてやる。いつか終わる時に悔いなく死ねるように、生き抜いてやる。</p>
-    <p>　その邪魔をするならば、何者だろうと遠慮はしない。</p>
-    <p>　あの青く美しい月だろうと、この手中に収めて殴り込みをかけてやる。</p>
-    <p>　だからこれは、聞こえていない事を承知の上で放つ宣戦布告だ。</p>
+    <p>梅赛德斯仰望苍月，露出充满好战的笑容。</p>
+    <p>就像在这个世界上最初下定决心的时候一样，把手伸到前面，紧紧地握住月亮，把月亮关在手中。</p>
+    <p>我会在这个世界上全力活下去。总有一天要结束的时候，我会无怨无悔地死去，好好活下去。</p>
+    <p>如果要妨碍他们的话，不管是谁都不客气。</p>
+    <p>不管是那个湛蓝美丽的月亮，我都会把它收在手上殴打它。</p>
+    <p>所以，这是在明知没有听到的情况下发出的宣战公告。</p>
     <p></p>
-    <p>　――いずれそちらに行く。それまで待っていろ。</p>
-    <p>パパンテンション↑↑↑</p>
+    <p>——总有一天我会去那里。在那之前等着吧。</p>
+    <p class="divline"></p>
+    <p>パパンテンション↑↑↑ <span class="comment translator">看着像是在说情绪上涨的意思？</span></p>
     <p></p>
-    <p>ベンケイ“無表情無気力系と思っていた主人が本性解放して以降、ずっとやばい件”</p>
-    <p>シュフ“困難な道大好き系女子であったか……”</p>
-    <p>ツヴェルフ『 ( ゜д゜) 』</p>
+    <p>本凯“<span class="character">本以为是无表情无精力系的主人，自本性解放以来，一直是危险事件</span>”</p>
+    <p>舒夫“<span class="character">是非常喜欢困难道路的女生吗……</span>”</p>
+    <p>茨瓦尔夫『 ( ゜д゜) 』</p>
     <p></p>
-    <p>少し前の話なのですが、ＴＯブックス様の漫画サイトである“コロナEX”がオープンしたようです。</p>
-    <p>こちらではメルセデスも掲載されていて、ニコニコ静画よりも早く更新されるとの事です。</p>
-    <p>もし興味がありましたら是非、一度覗いていってみて下さい。</p>
+    <p>这是之前的事了，好像TO books的漫画网站“コロナEX”开张了。(<span class="comment translator">https://to-corona-ex.com/</span> )</p>
+    <p>这里还刊登了梅赛德斯，据说比niconico静态画还要快更新。</p>
+    <p>如果有兴趣的话，请一定要去看看。</p>
+    <p><span class="comment translator">https://to-corona-ex.com/comics/20000000054621</span></p>
 </body>
 
 </html>
