批量修改： 将『』改成《》

--- a/OEBPS/Text/c126.xhtml
+++ b/OEBPS/Text/c126.xhtml
@@ -113,18 +113,18 @@
     <p>　まあ、メルセデスは基本的には最初に入手したダンジョンの管理者であるツヴェルフにばかり質問するので、彼もどうせ空気になるだろう。</p>
     <p></p>
     <p></p>
-    <p>『ようこそ、ダンジョンマスター・メルセデス様。私はツェーン。このダンジョンの管理者を務めております』</p>
+    <p>《<span class="character">ようこそ、ダンジョンマスター・メルセデス様。私はツェーン。このダンジョンの管理者を務めております</span>》</p>
     <p>“ああ。早速で悪いが、このダンジョンは私の所持しているシュタルクダンジョン……このハルバードと統合する。出来るか？”</p>
-    <p>『お任せを』</p>
+    <p>《<span class="character">お任せを</span>》</p>
     <p></p>
     <p></p>
     <p>　前回帝国ダンジョンを入手した際には、『壊れない金属』で出来た防具を増やす事を優先して腕輪にしたが、今回はハルバードと統合する事を選んだ。</p>
     <p>　こうする事でダンジョンの拡張に繋がるし、このグレンツェダンジョンの持つポイントと魔物がそっくりそのままシュタルクダンジョンに統合されるので出来る事も多くなるはずだ。</p>
     <p></p>
     <p></p>
-    <p>『あの……随分あっさりされていますね……もっとこう、私に質問とか……』</p>
+    <p>《<span class="character">あの……随分あっさりされていますね……もっとこう、私に質問とか……</span>》</p>
     <p>“質問ならばこの後ツヴェルフにするから問題ない。早くやってくれ”</p>
-    <p>『……はいぃ……』</p>
+    <p>《<span class="character">……はいぃ……</span>》</p>
     <p></p>
     <p></p>
     <p>　ツェーンと名乗った優男は登場早々メルセデスの塩対応の洗礼を浴び、落ち込んでしまった。</p>
@@ -146,7 +146,7 @@
     <p>　ツェーン？　誰だっけ、それ。</p>
     <p></p>
     <p></p>
-    <p>『お呼びですか、マスター』</p>
+    <p>《<span class="character">お呼びですか、マスター</span>》</p>
     <p>“ああ。新たにダンジョンを攻略し、これで私は三つのダンジョンのマスターとなった。</p>
     <p>話せる事も前回より増えているはずだと思ってな……。</p>
     <p>聞かせてくれるか？　この世界の神……人間が、何故この世界と私達を創ったのかを”</p>
@@ -166,7 +166,7 @@
     <p>　前回はここまで聞く事が出来た。そして今、その続きを聞く事が出来る。</p>
     <p></p>
     <p></p>
-    <p>『イエス、マスター。ではまず、この世界の成り立ちから語りましょう』</p>
+    <p>《<span class="character">イエス、マスター。ではまず、この世界の成り立ちから語りましょう</span>》</p>
     <p></p>
     <p></p>
     <p>　そしてツヴェルフは、話せる日を待ち望んでいたように口を開いた。</p>
