--- a/OEBPS/Text/c127.xhtml
+++ b/OEBPS/Text/c127.xhtml
@@ -12,8 +12,7 @@
 
 <body>
     <h1>127　コンペティション</h1>
-    <p>『この世界の始まりは西暦……当時は既に西暦という言葉自体が忘れ去られていましたが、マスターの分かりやすいようにあえて西暦で語るならば一万五千と二百三十三年。突如として火星がそれまでの軌道から逸れ、少しだけ太陽に近づいた事に端を発します』
-    </p>
+    <p>《<span class="character">この世界の始まりは西暦……当時は既に西暦という言葉自体が忘れ去られていましたが、マスターの分かりやすいようにあえて西暦で語るならば一万五千と二百三十三年。突如として火星がそれまでの軌道から逸れ、少しだけ太陽に近づいた事に端を発します</span>》</p>
     <p></p>
     <p></p>
     <p>　ツヴェルフの説明にメルセデスはふむ、と相槌を打つ。</p>
@@ -117,9 +116,9 @@
     <p></p>
     <p></p>
     <p>“まあいい……その記憶の転写とはどのくらいの頻度で行われている？”</p>
-    <p>『…………』</p>
+    <p>《<span class="character">…………</span>》</p>
     <p>“ツヴェルフ？”</p>
-    <p>『申し訳ありません。現在の権限ではこの先を語る事は出来ないようです』</p>
+    <p>《<span class="character">申し訳ありません。現在の権限ではこの先を語る事は出来ないようです</span>》</p>
     <p></p>
     <p></p>
     <p>　どうやら今回の情報開示はここまでのようだ。</p>
@@ -149,7 +148,7 @@
     <p>　ダンジョン№0はそうするだけの価値がある……いや、そうしてでも守らなければならない危険物だ。</p>
     <p></p>
     <p></p>
-    <p>『申し訳ありません。それは№0以外の全てのダンジョンを制覇した者のみが知る事が出来るトップシークレットとなっております』</p>
+    <p>《<span class="character">申し訳ありません。それは№0以外の全てのダンジョンを制覇した者のみが知る事が出来るトップシークレットとなっております</span>》</p>
     <p>“そうか……そう簡単に見付かる場所ではないんだな？”</p>
     <p>『いえ、発見自体は誰でも可能です。</p>
     <p>しかしこの世界にある№0以外のダンジョンをクリアしない限り、挑む事は決して出来ません』</p>
