--- a/OEBPS/Text/c137.xhtml
+++ b/OEBPS/Text/c137.xhtml
@@ -17,7 +17,7 @@
     <p>　魔物は基本的にはダンジョンで生まれてダンジョンで生きるが、ハンナが飼っている兎のように、時にはダンジョンから魔物が出てきてしまう事もある。</p>
     <p>　このゴブリンもまた、そんなダンジョンから出てきた魔物の一つだ。</p>
     <p>　ゴブリンは夢と野心に胸を膨らませながら、遠くに見える吸血鬼の都市を前に決意を固める。</p>
-    <p>『ここが吸血鬼の都市かあ。よーし……沢山嫁さん攫って、沢山子供作って、ここを俺の王国にするぞー！』</p>
+    <p>《<span class="character">ここが吸血鬼の都市かあ。よーし……沢山嫁さん攫って、沢山子供作って、ここを俺の王国にするぞー！</span>》</p>
     <p>　このゴブリンは、ダンジョンを徘徊するだけの日々に退屈してダンジョンを旅立った個体だ。</p>
     <p>　彼の夢は、ダンジョンの中でのナンバーワンとなる事。</p>
     <p>　だが生まれ育ったダンジョンの中では彼はナンバーワンどころかワーストワン……第一階層に配置された雑魚だ。</p>
@@ -31,7 +31,7 @@
     <p>　そうして誘拐した嫁を育てて子供を産ませ、数が増えれば今度は大人の嫁を狙う。</p>
     <p>　その繰り返しでコツコツやっていけば、いずれは大帝国だ。</p>
     <p>　そんな未来を夢見て、ゴブリンは両腕を突き上げた。</p>
-    <p>『待っていてくれ、未来の嫁さん達！　第二のゴブ生、頑張るぞー！』</p>
+    <p>《<span class="character">待っていてくれ、未来の嫁さん達！　第二のゴブ生、頑張るぞー！</span>》</p>
     <p>　そうして決意と夢を高らかに宣言した直後――彼の首から上がすっ飛んだ。</p>
     <p>　同時に周囲の木々も纏めて切断され、二つの影が駆け抜ける。</p>
     <p>　影の正体は高速戦闘を続けているメルセデスとベルンハルトの親子だ。</p>
