--- a/OEBPS/Text/c079.xhtml
+++ b/OEBPS/Text/c079.xhtml
@@ -35,7 +35,7 @@
     <p>だから梅赛德斯は、まずツヴェルフにかかっている情報規制を解く事を考えた。</p>
     <p>つまりは……手持ちのダンジョンを増やす。それこそが自分のするべき事だと考えたのだ。</p>
     <p>故に梅赛德斯は今、学園から離れた平原にベアトリクスと一緒に立っていた。</p>
-    <p>『では、これよりダンジョン譲渡の儀を行います。よろしいですね？』</p>
+    <p>《<span class="character">では、これよりダンジョン譲渡の儀を行います。よろしいですね？</span>》</p>
     <p>“ああ”</p>
     <p>ダンジョンは、その所有権を移動させる事が出来る。</p>
     <p>それはベアトリクスから齎された情報であり、ツヴェルフも肯定していた。</p>
@@ -46,7 +46,7 @@
     <p>『譲渡の儀にダンジョンの力は使えません。つまり守護者を相手に历史之眼をぶつけるといった戦術は使用不可能です。また、ダンジョンの魔物を出す事も出来ません。</p>
     <p>使える魔物は、マスター自身の力で捕獲した魔物のみです』</p>
     <p>“つまりベンケイ、クロ、ピーコ、シュフの四体か”</p>
-    <p>『はい』</p>
+    <p>《<span class="character">はい</span>》</p>
     <p>守護者との戦いにダンジョンの力は使えない。</p>
     <p>何故なら守護者との戦いとは、その者が真にダンジョンを手に入れるか相応しいかを見極める試練だからだ。</p>
     <p>故に自分の力以外を使う事は許されない。</p>
@@ -55,7 +55,7 @@
     <p>つまり今回梅赛德斯が使えるのは、ダンジョンの機能を制限されたブルートアイゼンと、ベンケイ、クロ、シュフ、ピーコの四体。</p>
     <p>それから防具と、魔石などのアイテム類も勝敗を分ける重要な要素だろう。</p>
     <p>それと一つ……隠し玉として五体目の魔物もいるにはいるが、これは切り札なので出番は出来れば無い方がいい。</p>
-    <p>『それではマスター、ダンジョン譲渡の儀に挑みますか？』</p>
+    <p>《<span class="character">それではマスター、ダンジョン譲渡の儀に挑みますか？</span>》</p>
     <p>“ああ”</p>
     <p>ダンジョン譲渡は出来れば早急に済ませておきたい事だった。</p>
     <p>制覇の為にもダンジョンを手に入れたいというのもあるが、それ以上にベアトリクスの事を信用していないのだ。</p>
