漏修改补充

--- a/OEBPS/Text/c140.xhtml
+++ b/OEBPS/Text/c140.xhtml
@@ -217,7 +217,7 @@
     <p></p>
     <p>本凯“<span class="character">本以为是无表情无精力系的主人，自本性解放以来，一直是危险事件</span>”</p>
     <p>舒夫“<span class="character">是非常喜欢困难道路的女生吗……</span>”</p>
-    <p>茨瓦尔夫『 ( ゜д゜) 』</p>
+    <p>茨瓦尔夫『<span class="character"> ( ゜д゜) </span>』</p>
     <p></p>
     <p>这是之前的事了，好像TO books的漫画网站“コロナEX”开张了。(<span class="comment translator">https://to-corona-ex.com/</span> )</p>
     <p>这里还刊登了梅赛德斯，据说比niconico静态画还要快更新。</p>
